force-app/main/default/objects/FactoringResponse__c/FactoringResponse__c.object-meta.xml
<CustomObject>
    <label>Factoring Response</label>
    <nameField>
        <displayFormat>FRES#{000000}</displayFormat>
        <label>Response #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factoring Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>