force-app/main/default/objects/FactoringResponse__c/fields/FactoringRequest__c.field-meta.xml
<CustomField>
    <fullName>FactoringRequest__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Factoring Request</label>
    <referenceTo>FactoringRequest__c</referenceTo>
    <relationshipLabel>Factoring Responses</relationshipLabel>
    <relationshipName>FactoringResponses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>