force-app/main/default/objects/FactoringResponse__c/fields/PurchaseLimit__c.field-meta.xml
<CustomField>
    <fullName>PurchaseLimit__c</fullName>
    <label>Purchase Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>