force-app/main/default/objects/FactoringResponse__c/fields/ReasonForDeclination__c.field-meta.xml
<CustomField>
    <fullName>ReasonForDeclination__c</fullName>
    <label>Reason For Declination</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReasonForDeclination</valueSetName>
    </valueSet>
</CustomField>